--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,7 @@
 @import './components/navbar';
 @import './components/pages/mainHome';
 @import './components/pages/mainProfile';
+@import './components/pages/mainMembers';
 @import './components/responsive';
 
 
