--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
 @import './components/pages/mainHome';
 @import './components/pages/mainProfile';
 @import './components/pages/mainMembers';
+@import './components/pages/mainDiscography';
 @import './components/responsive';
 
 
