set media queries as @mixin values

--- a/scss/components/_variables.scss
+++ b/scss/components/_variables.scss
@@ -1,6 +1,5 @@
 
 
-
 // FONTS
 @font-face {
     font-family: Appears;
@@ -33,3 +32,34 @@ $sideBarFont: Seraya;
 $navBarFont: Valery;
 $bodyTextFont: Valery;
 // $bodyTextFont: 'Asap', sans-serif;
+
+
+
+// RESPONSIVE
+@mixin media-xs {
+    @media screen and (max-width : 300px) {
+        @content;
+    }
+}
+
+@mixin media-sm {
+    @media screen and (max-width : 480px) {
+        @content;
+    }
+}
+
+@mixin media-md {
+    @media screen and (max-width : 768px) {
+        @content;
+    }
+}
+@mixin media-lg {
+    @media screen and (max-width : 1024px) {
+        @content;
+    }
+}
+@mixin media-xl {
+    @media screen and (max-width : 1600px) {
+        @content;
+    }
+}
