--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -23,7 +23,7 @@
             top: -8px;
             width: 32px;
             height: 3px;
-            background: white;      
+            background: dimgray;      
             // backdrop-filter:invert(70%) ;
             transition: 2s ease-in-out;
 
@@ -35,7 +35,7 @@
             top: 5px;
             width: 20px;
             height: 3px;
-            background: white;      
+            background: dimgray;      
             // backdrop-filter:invert(70%);
             transition: 2s ease-in-out;
 
@@ -86,7 +86,9 @@
         text-align: center;
         // color: black;
         
-       
+        a:visited{
+            color: dimgray;
+        }
 
         &.open {
             transition: 2s ease-in-out;
@@ -94,22 +96,10 @@
             width: 100vw;
         }
 
-        &__item {
-            transition: .1s ease-in-out;
-            opacity: 0;
-            // transform: translateX(100vw);
-
-           
         
-            &.open {
-                transition: 1s ease-in-out;
-                opacity: 1;
-                // transform: translateX(0);
-            }
-        }
 
         &__item {
-            padding: 5em 0 0 0;
+            padding: 8em 0 0 0;
             // line-height: 2.2rem;
             // display: inline;
             line-height: 8rem;
@@ -131,9 +121,9 @@
 
                 a{
                     position: relative;
-                    color: inherit;
+                    // color: inherit;
                     font-family: $navBarFont;
-                    // animation: strike 2s linear 1 alternate;             
+                    animation: strike 2s linear 1 alternate;             
 
                     &:hover::after{
                         content: '';
@@ -152,17 +142,27 @@
                 } 
 
             }
+
         }
 
         a {
             text-decoration: none;
-            color: black;
+            transition: 1.5s ease-in;  
+
+            &:hover{
+                color: inherit;
+                transition: .2s ease-in;  
+            }
         }
+
+        
 
         &.dark{
             background-color: black;
             color: white;
         }
+
+        
         
     }
 
@@ -190,6 +190,8 @@
             top: 0;
             position: absolute;
             overflow: hidden;
+
+            
         }
 
         &::before{
@@ -272,7 +274,7 @@
 
         a{
             text-decoration: none;
-            color: inherit;
+            // color: inherit;
         }
     }
     
